--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Map.Map
 EditorStartupMap=/Game/Map.Map
 GlobalDefaultGameMode=/Game/Pion/BP_GameMode.BP_GameMode_C
+GameInstanceClass=/Game/Pion/BP_GameInstance.BP_GameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
